refactor: replace CottonPlugin with JavaPlugin, improve plugin handling
- Migrated from `CottonPlugin` to `JavaPlugin` for better structure.
- Enhanced `PluginManager` with stricter `plugin.yml` validation.
- Improved error handling for plugin loading and API version checks.
- Prefixed permission methods (`hasPermission`, etc.) with `h5$` for mixin compatibility.
- Optimized `javaVersionFromClassFileVersion` using `switch` expressions.
- Converted `Contributor` to a `record` for immutability.
- Fixed documentation formatting and removed redundant headers.